// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SSMKeyStore getAPIKey errors if there is no parameter attribute returned from SSM Parameter Store 1`] = `[Error: Unable to retrieve APIM API Key from SSM Parameter Store.]`;

exports[`SSMKeyStore getAPIKey errors if there is no parameter value returned from SSM Parameter Store 1`] = `[Error: Unable to retrieve APIM API Key from SSM Parameter Store.]`;

exports[`SSMKeyStore getAPIKey requests the API key from SSM Parameter Store using the configured name and returns the parameter value 1`] = `
[
  [
    GetParameterCommand {
      "deserialize": null,
      "input": {
        "Name": "fake_api_key_parameter_name",
        "WithDecryption": true,
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "identify": [Function],
        "identifyOnResolve": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
      "schema": [
        9,
        "com.amazonaws.ssm",
        "GetParameter",
        0,
        [Function],
        [Function],
      ],
      "serialize": null,
    },
  ],
]
`;

exports[`SSMKeyStore getPrivateKey throws its own error if the given getPrivateKey callback errors 1`] = `[Error: Error fetching private key.]`;

exports[`SSMKeyStore putAccessToken puts the access token into SSM Parameter Store 1`] = `
[
  [
    PutParameterCommand {
      "deserialize": null,
      "input": {
        "Name": "fake_access_token_parameter_name",
        "Overwrite": true,
        "Value": "{"access_token":"fake_access_token","expires_at":1674778100,"token_type":"fake_token_type"}",
      },
      "middlewareStack": {
        "add": [Function],
        "addRelativeTo": [Function],
        "applyToStack": [Function],
        "clone": [Function],
        "concat": [Function],
        "identify": [Function],
        "identifyOnResolve": [Function],
        "remove": [Function],
        "removeByTag": [Function],
        "resolve": [Function],
        "use": [Function],
      },
      "schema": [
        9,
        "com.amazonaws.ssm",
        "PutParameter",
        0,
        [Function],
        [Function],
      ],
      "serialize": null,
    },
  ],
]
`;

exports[`SSMKeyStore putAccessToken throws its own error if there is an error from SSM Parameter Store 1`] = `[Error: Unable to store Access Token in SSM Parameter Store.]`;
